@@ -5,6 +5,7 @@ Core changes:
 - added checks for out of memory condition
 - fixed message when failed to write battery file (previously always saying
   failure to open file NULL)
+- fixed sound mixing ratios specified in 0x4000082 (thanks Damian)
 - simulating memory behaviour when no cartridge present (32-bits still
   incorrect)
 Windows version:
